--- a/Network_agent/package.json
+++ b/Network_agent/package.json
@@ -29,6 +29,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
     "ping": "^1.0.0",
     "proxy-from-env": "^1.1.0"
   },
